--- a/css/styless.css
+++ b/css/styless.css
@@ -5,10 +5,6 @@
   box-sizing: border-box;
 }
 
-html{
-  width: 1600px;
-}
-
 /* -------------------- prime styles -------------------- */
 
 :root {
@@ -20,6 +16,7 @@ html{
   }
 
   .container{
+    margin: 0 auto;
     width: 1200px;
     display: flex;
     justify-content: space-between;
@@ -28,6 +25,7 @@ html{
   }
 
 section{
+  width: 100%;
   padding: 94px 0px;
 }
 
@@ -57,7 +55,8 @@ section{
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
 }
 
 .box-header .container{
@@ -167,11 +166,9 @@ main h2 {
 .main-tittle{
   color: var(--primary-background-color);
   background-color: var(--secundary-background-color);
+  height: 600px;
+  display: flex;
   text-align: center;
-}
-
-.main-tittle .container{
-  margin: 106px 200px;
 }
 
 .tittle{
@@ -300,10 +297,6 @@ main p.text{
   flex-direction: row;
   }
 
-  .box-footer .container{
-    padding: 0px 215px;
-  }
-
 /*contact-footer*/
 
   .contact-footer{
@@ -346,20 +339,16 @@ main p.text{
 /* -------------------- BRIEFCASE -------------------- */
 
 .briefcase {
-  width: 1600px;
-  display:inline-flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
 }
 
-.briefcase .nav-main {
-  gap: 15px;
-  width: 1200px;
+.briefcase .nav-main .container{
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  margin-top: 106px;
-  margin-bottom: 50px;
+  margin-bottom: 56px;
 }
 
 .buttons{
